# MyBaseLibrary

./: build.gradle  cache  config.gradle  settings.gradle
alipay-demo/: build.gradle  tanghongtu.jks
alipay-demo/src/main/: AndroidManifest.xml
alipay-demo/src/main/res/layout/: activity_main.xml
alipay-demo/src/main/res/values/: strings.xml
andfix-demo/: build.gradle
andfix-demo/src/main/: AndroidManifest.xml
andfix-demo/src/main/res/layout/: activity_main.xml
andfix-demo/tools/: bug.apk  debug.keystore  fixbug.apk
app/: build.gradle
app/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
cryption/: build.gradle
cryption/src/main/: AndroidManifest.xml
floatbottombutton/: build.gradle
floatbottombutton/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
https-demo/: build.gradle
https-demo/src/main/: AndroidManifest.xml
https-demo/src/main/assets/: alipay.cer
smart-update/: build.gradle
smart-update/src/main/: AndroidManifest.xml
smart-update/src/main/cpp/: CMakeLists.txt  PatchUtil.cpp  bspatch.c  bspatch.h
smart-update/tools/: new.apk  old.apk  patch.apk
smart_update/src/main/: AndroidManifest.xml
tinker-demo/: build.gradle  debug.keystore  tinker-support.gradle
tinker-demo/src/main/: AndroidManifest.xml
ui/: build.gradle
ui/src/main/: AndroidManifest.xml
util/: build.gradle
util/src/main/: AndroidManifest.xml
webapp-demo/: build.gradle
webapp-demo/src/main/: AndroidManifest.xml
webapp-demo/src/main/assets/: phonebook.html
(+254 files in other folders)
